--- a/assets/main.css
+++ b/assets/main.css
@@ -1,3 +1,19 @@
+@charset "UTF-8";
+@font-face {
+  font-family: 'logotype';
+  src: url('assets/fonts/ロゴたいぷゴシック.otf');
+}
+
+*{
+  font-size: calc(62.5% + 0.8vw);
+}
+
 .name{
-  font-family: 'Bangers' ,cursive;
+  font-family: 'logotype';
+  font-size: calc(62.5% + 0.8vw);
+}
+
+.theme{
+  text-align: center;
+  font-size: calc(62.5% + 10vw);
 }
