--- a/assets/main.css
+++ b/assets/main.css
@@ -1,19 +1,82 @@
-@charset "UTF-8";
 @font-face {
   font-family: 'logotype';
   src: url('assets/fonts/ロゴたいぷゴシック.otf');
 }
 
 *{
-  font-size: calc(62.5% + 0.8vw);
+  font-size: calc(80% + 0.5vw);
+  margin: 0px;
+  padding: 0px;
+
+}
+
+#header{
+  width: 100%;
+  height: 100%;
+}
+
+
+#fixedheader{
+  display: flex;
+  justify-content: space-between;
 }
 
 .name{
-  font-family: 'logotype';
   font-size: calc(62.5% + 0.8vw);
 }
 
-.theme{
+
+#btn-menu{
+
+}
+
+#top{
+  font-size: calc(150% + 10vw);
+  margin-top: 25vh;
+  margin-bottom: 25vh;
+  margin-bottom: ;
+  text-align: center;
+}
+
+div#theme{
   text-align: center;
   font-size: calc(62.5% + 10vw);
+}
+
+div.timecountdown{
+  text-align: center;
+  /* box */
+  padding: 0.5em 1em;
+  margin: 2em 0;
+  background: whitesmoke;/*背景色*/
+  border-top: solid 6px black;
+  box-shadow: 0 3px 4px rgba(0, 0, 0, 0.32);/*影*/
+  /* over */
+  width: 80vw;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.tag{
+  font-size: calc(62.5%);
+}
+
+div#result{
+  font-size: calc(62.5% + 0.8vw);
+}
+
+
+.greet-main{
+  text-align: center;
+  width: 80vw;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 2em;
+  /* box */
+  padding: 0.5em 1em;
+  background: whitesmoke;/*背景色*/
+  border-top: solid 6px black;
+  box-shadow: 0 3px 4px rgba(0, 0, 0, 0.32);/*影*/
+  /* over */
+
 }
