--- a/assets/css/top.css
+++ b/assets/css/top.css
@@ -1,106 +1,130 @@
 @charset "UTF-8";
-
-*{
-  font-size: calc(62.5% + 0.5vw);
-  margin: 0px;
-  padding: 0px;
-  font-family: "Noto Sans JP";
-  clear:both;
+* {
+    font-size: calc(62.5% + 0.5vw);
+    margin: 0px;
+    padding: 0px;
+    font-family: "Noto Sans JP";
+    clear: both;
 }
+
 
 /*top*/
-#top{
-  width: 98vw;
-  height: 100vh;
+
+#top {
+    width: 98vw;
+    height: 100vh;
 }
 
+
 /* ヘッダー */
-#fixedheader{
-  position: fixed;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  top:2px;
-  right:0;
-  left:5px;
-  height:5vh;
-  font-size: calc(62.5% + 0.8vw);
-  }
 
-  /*menu btn */
-  .menu{
-      height: 20px;
-      position: absolute;
-      position: fixed;
-      right: 20px;
-      top: 20px;
-      width: 30px;
-      z-index: 99;
-      cursor: pointer;
-  }
-  .menu__line{
-      background: #000;
-      display: block;
-      height: 2px;
-      position: absolute;
-      transition:transform .3s;
-      width: 100%;
-  }
-  .menu__line--center{
-      top: 9px;
-  }
-  .menu__line--bottom{
-      bottom: 0;
-  }
-  .menu__line--top.active{
-      top: 8px;
-      transform: rotate(45deg);
-      background: #fff;
-  }
-  .menu__line--center.active{
-      transform:scaleX(0);
-      background: #fff;
+#fixedheader {
+    position: fixed;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    top: 2px;
+    right: 0;
+    left: 5px;
+    height: 5vh;
+    font-size: calc(62.5% + 0.8vw);
+}
 
-  }
-  .menu__line--bottom.active{
-      bottom: 10px;
-      transform: rotate(135deg);
-      background: #fff;
 
-  }
+/*menu btn */
 
-  /*gnav*/
-  .gnav{
-      background: rgba(0,0,0,0.9);
-      display: none;
-      height: 100%;
-      position: fixed;
-      width: 100%;
-      z-index: 98;
-      top:0;
-  }
-  .gnav__wrap{
-      align-items:center;
-      display: flex;
-      height: 100%;
-      justify-content: center;
-      position: absolute;
-      width: 100%;
-  }
-  .gnav__menu{
+.menu {
+    height: 20px;
+    position: absolute;
+    position: fixed;
+    right: 20px;
+    top: 20px;
+    width: 30px;
+    z-index: 99;
+    cursor: pointer;
+}
+
+.menu__line {
+    background: #000;
+    display: block;
+    height: 2px;
+    position: absolute;
+    transition: transform .3s;
+    width: 100%;
+}
+
+.menu__line--center {
+    top: 9px;
+}
+
+.menu__line--bottom {
+    bottom: 0;
+}
+
+.menu__line--top.active {
+    top: 8px;
+    transform: rotate(45deg);
+    background: #fff;
+}
+
+.menu__line--center.active {
+    transform: scaleX(0);
+    background: #fff;
+}
+
+.menu__line--bottom.active {
+    bottom: 10px;
+    transform: rotate(135deg);
+    background: #fff;
+}
+
+
+/*gnav*/
+
+.gnav {
+    background: rgba(0, 0, 0, 0.9);
+    display: none;
+    height: 100%;
+    position: fixed;
+    width: 100%;
+    z-index: 98;
+    top: 0;
+}
+
+.gnav__wrap {
+    align-items: center;
+    display: flex;
+    height: 100%;
+    justify-content: center;
+    position: absolute;
+    width: 100%;
+}
+
+.gnav__menu {
     list-style: none;
-  }
-  .gnav__menu__item{
-      margin: 30px 0;
-  }
-  .gnav__menu__item a{
-      color: #fff;
-      font-size: 100%;
-      font-weight: bold;
-      padding: 40px;
-      text-decoration: none;
-      transition: .5s;
-  }
-  .gnav__menu__item a:hover{
-      color: #666;
-  }
+}
+
+.gnav__menu__item {
+    margin: 30px 0;
+}
+
+.gnav__menu__item a {
+    color: #fff;
+    font-size: 100%;
+    font-weight: bold;
+    padding: 40px;
+    text-decoration: none;
+    transition: .5s;
+}
+
+.gnav__menu__item a:hover {
+    color: #666;
+}
+
+#footer {
+    display: flex;
+    height: 20vh;
+    justify-content: center;
+}
+
+.name {}
